@startuml

title 抽象工厂类图

abstract class Pizza {
    + void prepare()
    + void bake()
    + void cut()
    + void box()
}

class BeiJingCheessPizza {

}

class BeiJingPepperPizza {

}

class LondonCheessPizza {

}

class LondonPepperPizza {

}

Pizza <|-- BeiJingCheessPizza:继承
Pizza <|-- BeiJingPepperPizza:继承
Pizza <|-- LondonCheessPizza:继承
Pizza <|-- LondonPepperPizza:继承

class OrderPizza {

}


interface AbsFactory {
    + createPizza(): Pizza
}

class BJFactory {

}

class LDFactory {

}

AbsFactory <|.. BJFactory:实现
AbsFactory <|.. LDFactory:实现

OrderPizza o-- AbsFactory:聚合

BeiJingCheessPizza <.. BJFactory:依赖
BeiJingPepperPizza <.. BJFactory:依赖
LondonCheessPizza <.. LDFactory:依赖
LondonPepperPizza <.. LDFactory:依赖

@enduml